objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>SBQQ__BlockPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The block price that is applied to this order product at order creation time.</description>
        <inlineHelpText>The block price that is applied to this order product at order creation time.</inlineHelpText>
        <label>Block Price</label>
        <referenceTo>SBQQ__BlockPrice__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__BookingsIndicator__c</fullName>
        <description>Indicates whether bookings are included.</description>
        <inlineHelpText>Indicates whether bookings are included.</inlineHelpText>
        <label>Bookings Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BookingsIndicator</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BundleRoot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The root bundle parent Order Product of components. This component will be deleted if its bundle root is deleted.</description>
        <inlineHelpText>An internally used field that points to the root of its bundle parent.</inlineHelpText>
        <label>Bundle Root</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Products (Bundle Root)</relationshipLabel>
        <relationshipName>BundleChildren</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ChargeType__c</fullName>
        <description>The type of the product charge.</description>
        <inlineHelpText>The type of the product charge.</inlineHelpText>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ChargeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ContractAction__c</fullName>
        <description>The contract action where this order product is resulted from.</description>
        <inlineHelpText>The contract action where this order product is resulted from.</inlineHelpText>
        <label>Contract Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ContractAction</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contract of the subscription that is created from this order product.</description>
        <inlineHelpText>The contract of the subscription that is created from this order product.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the order product is contracted.</description>
        <inlineHelpText>Indicates if the order product is contracted.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractingMethod__c</fullName>
        <description>Controls the contracting behavior of an Order Product. &quot;Inherit&quot; uses the behavior of the parent Order. &quot;Contract Separately&quot; generates a separate Contract for
            the Order Product. &quot;No Contract&quot; skips the Order Product altogether during the contracting process.</description>
        <inlineHelpText>Controls the contracting behavior of an Order Product.</inlineHelpText>
        <label>Contracting Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Contract Separately</fullName>
                </value>
                <value>
                    <fullName>Do Not Contract</fullName>
                </value>
                <value>
                    <fullName>Inherit</fullName>
                    <default>true</default>
                    <label>Inherit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultSubscriptionTerm__c</fullName>
        <description>Term length of the subscription, which only applies if the product is a subscription. It is copied from the Subscription Term of the related product when the line item is first
            generated.</description>
        <inlineHelpText>Term length of the subscription, which only applies if the product is a subscription. It is copied from the Subscription Term of the related product when the line item is first
            generated.</inlineHelpText>
        <label>Default Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__DimensionType__c</fullName>
        <description>For multi-segmented Products, this is the type of price dimeension (e.g. &quot;YEAR&quot;, &quot;MONTH&quot;, &quot;QUARTER&quot;) of the order item.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>For multi-segmented Products, this is the type of price dimeension (e.g. &quot;YEAR&quot;, &quot;MONTH&quot;, &quot;QUARTER&quot;) of the order item.</inlineHelpText>
        <label>Segment Type</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule applied to this order product.</description>
        <inlineHelpText>Discount schedule applied to this order product.</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderProductBookings__c</fullName>
        <description>Amount of the order product’s total price.</description>
        <formula>IF( ISPICKVAL(SBQQ__BookingsIndicator__c  , &apos;Include&apos;) , UnitPrice * Quantity , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount of the order product’s total price.</inlineHelpText>
        <label>Order Product Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderedQuantity__c</fullName>
        <description>The actual quantity of the product placed in the order.</description>
        <inlineHelpText>The quantity of products have been ordered from a quote.</inlineHelpText>
        <label>Ordered Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceDimension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the price dimension applied to this order product.</description>
        <inlineHelpText>References the price dimension applied to this order product.</inlineHelpText>
        <label>Price Dimension</label>
        <referenceTo>SBQQ__Dimension__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price schedule applied to this order product.</description>
        <inlineHelpText>Price schedule applied to this order product.</inlineHelpText>
        <label>Price Schedule</label>
        <referenceTo>SBQQ__PriceSchedule__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PricingMethod__c</fullName>
        <description>Determines how the price for this line item is set. &quot;List&quot; = calculated by subtracting discount from list price. &quot;Cost&quot;  = calculated by adding markup to cost.</description>
        <inlineHelpText>Indicates how the price for this line item is calculated. &quot;List&quot; = subtracting discount from list price. &quot;Cost&quot; = adding markup to cost.</inlineHelpText>
        <label>Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                    <default>true</default>
                    <label>List</label>
                </value>
                <value>
                    <fullName>Percent Of Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ProductSubscriptionType__c</fullName>
        <description>Set the order item&apos;s product subscription type.</description>
        <inlineHelpText>Set the order item&apos;s product subscription type.</inlineHelpText>
        <label>Product Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ProrateMultiplier__c</fullName>
        <description>Calculated ratio used to compute Prorated Price.</description>
        <inlineHelpText>Calculated ratio used to compute Prorated Price.</inlineHelpText>
        <label>Prorate Multiplier</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote line where this order product is created from.</description>
        <inlineHelpText>The quote line where this order product is created from.</inlineHelpText>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotedListPrice__c</fullName>
        <description>List unit price for the product quoted by this line item. List Price originates from the price book.</description>
        <inlineHelpText>List unit price for the product quoted by this line item. List Price originates from the price book.</inlineHelpText>
        <label>Quoted List Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotedQuantity__c</fullName>
        <description>The quoted quantity.</description>
        <inlineHelpText>The quoted quantity.</inlineHelpText>
        <label>Quoted Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Required By</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RevisedOrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the order product that this order product revises.</description>
        <inlineHelpText>References the order product that this order product revises.</inlineHelpText>
        <label>Revised Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Products (Revised Order Product)</relationshipLabel>
        <relationshipName>RevisingOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentIndex__c</fullName>
        <description>For multi-segmented products, Index representing this order product&apos;s position in the segment table.</description>
        <inlineHelpText>For multi-segmented products, Index representing this order product&apos;s position in the segment table.</inlineHelpText>
        <label>Segment Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentKey__c</fullName>
        <description>For multi-segmented Products, this is a shared key used to group multi-dimensional Quote Lines together.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>For multi-segmented Products, this is a shared key used to group multi-dimensional Quote Lines together.</inlineHelpText>
        <label>Segment Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>ShippingAccountOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Status__c</fullName>
        <description>The current state of the order product.</description>
        <inlineHelpText>This field captures the Activation Status of the order product</inlineHelpText>
        <label>Activation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__OrderProductStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionPricing__c</fullName>
        <description>Method of calculating the subscription price. A blank value indicates that the line item isn&apos;t a subscription product.</description>
        <inlineHelpText>Method of calculating the subscription price. A blank value indicates that the line item isn&apos;t a subscription product.</inlineHelpText>
        <label>Subscription Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionPricing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTerm__c</fullName>
        <label>Subscription Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionType__c</fullName>
        <description>Indicates the subscription type to determine contract&apos;s pricing.</description>
        <inlineHelpText>Indicates the subscription type to determine contract&apos;s pricing.</inlineHelpText>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ProductSubscriptionType__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription created from this order product</description>
        <inlineHelpText>Subscription created from this order product</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>SubscriptionOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TaxAmount__c</fullName>
        <description>Estimated tax amount</description>
        <inlineHelpText>Estimated tax amount</inlineHelpText>
        <label>Estimated Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__TaxCode__c</fullName>
        <description>Specifies the tax code for taxation rules.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Specifies the tax code for taxation rules.</inlineHelpText>
        <label>Tax code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Term Discount Schedule applied to this order product.</description>
        <inlineHelpText>Term Discount Schedule applied to this order product.</inlineHelpText>
        <label>Term Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Order Products (Term Discount Schedule)</relationshipLabel>
        <relationshipName>TermedOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TerminatedDate__c</fullName>
        <description>Date that this order product&apos;s related subscription was terminated</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date that this order product&apos;s related subscription was terminated</inlineHelpText>
        <label>Terminated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__UnproratedNetPrice__c</fullName>
        <description>The full-term Net Unit Price.</description>
        <inlineHelpText>The full term net price for individual line.</inlineHelpText>
        <label>Full-Term Net Unit Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradedSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription being upgraded by this quote line.</description>
        <inlineHelpText>Subscription being upgraded by this quote line. When the quote is contracted this subscription will have its Terminated Date field populated.</inlineHelpText>
        <label>Upgraded Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Upgraded Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubmittedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubmittedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitPriceForceOverride__c</fullName>
        <label>Unit Price Force Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <validationRules>
        <fullName>PMC_CPQ_FPDOrderItemsReadOnly</fullName>
        <active>true</active>
        <description>This rule is to prevent users from editing fields on FPD Order Product record except Integration User and System Administrator.</description>
        <errorConditionFormula>AND(
    NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
    AND(
        NOT($Profile.Name = &quot;System Administrator&quot;),
        NOT($Profile.Name = &quot;API Only profile&quot;),
        NOT($Profile.Name = &quot;Salesforce API Only System Integrations&quot;),
        NOT( CONTAINS($Profile.Name,&apos;Digital Hub&apos;))
    ),
    TEXT( SBQQ__Subscription__r.SBQQ__QuoteLine__r.PMC_CPQ_ContractType__c ) = &quot;FPD&quot;,  
    NOT(ISNEW()),
    OR(
        ISCHANGED(SBQQ__Activated__c),
        ISCHANGED(SBQQ__Status__c),
        ISCHANGED(AdjustedLineAmount),
        ISCHANGED(TotalAdjustedLineTaxAmount),
        ISCHANGED(SBQQ__Asset__c),
        ISCHANGED(AvailableQuantity),
        ISCHANGED(SBQQ__BillingFrequency__c),
        ISCHANGED(SBQQ__BillingType__c),
        ISCHANGED(SBQQ__BlockPrice__c),
        ISCHANGED(SBQQ__BookingsIndicator__c),
        ISCHANGED(SBQQ__BundleRoot__c),
        ISCHANGED(SBQQ__ChargeType__c),
        ISCHANGED(SBQQ__Contract__c),
        ISCHANGED(SBQQ__ContractAction__c),
        ISCHANGED(SBQQ__Contracted__c),
        ISCHANGED(ContractId),
        ISCHANGED(SBQQ__ContractingMethod__c),
        ISCHANGED(CurrencyIsoCode),
        ISCHANGED(SBQQ__DefaultSubscriptionTerm__c),
        ISCHANGED(SBQQ__DiscountSchedule__c),
        ISCHANGED(TotalAdjustmentDistAmount),
        ISCHANGED(TotalAdjustmentDistTaxAmount),
        ISCHANGED(EndDate),
        ISCHANGED(SBQQ__TaxAmount__c),
        ISCHANGED(SBQQ__UnproratedNetPrice__c),
        ISCHANGED(GrossUnitPrice),
        ISCHANGED(Description),
        ISCHANGED(LineNumber),
        ISCHANGED(ListPrice),
        ISCHANGED(OrderDeliveryGroupId),
        ISCHANGED(SBQQ__OrderedQuantity__c),
        ISCHANGED(SBQQ__OrderProductBookings__c),
        ISCHANGED(PricebookEntryId),
        ISCHANGED(SBQQ__PriceDimension__c),
        ISCHANGED(SBQQ__PriceSchedule__c),
        ISCHANGED(SBQQ__PricingMethod__c),
        ISCHANGED(TotalLineAdjustmentAmount),
        ISCHANGED(TotalLineAdjustmentTaxAmount),
        ISCHANGED(SBQQ__ProductSubscriptionType__c),
        ISCHANGED(RoundedLineAmount),
        ISCHANGED(TotalLineTaxAmount),
        ISCHANGED(SBQQ__ProrateMultiplier__c),
        ISCHANGED(SBQQ__QuotedListPrice__c),
        ISCHANGED(SBQQ__QuotedQuantity__c),
        ISCHANGED(SBQQ__QuoteLine__c),
        ISCHANGED(SBQQ__RequiredBy__c),
        ISCHANGED(SBQQ__RevisedOrderProduct__c),
        ISCHANGED(SBQQ__SegmentIndex__c),
        ISCHANGED(SBQQ__SegmentKey__c),
        ISCHANGED(SBQQ__DimensionType__c),
        ISCHANGED(SBQQ__ShippingAccount__c),
        ISCHANGED(ServiceDate),
        ISCHANGED(SBQQ__Subscription__c),
        ISCHANGED(SBQQ__SubscriptionPricing__c),
        ISCHANGED(SBQQ__SubscriptionTerm__c),
        ISCHANGED(SBQQ__SubscriptionType__c),
        ISCHANGED(SBQQ__TaxCode__c),
        ISCHANGED(SBQQ__TermDiscountSchedule__c),
        ISCHANGED(SBQQ__TerminatedDate__c),
        ISCHANGED(TotalAdjustmentAmount),
        ISCHANGED(TotalAdjustmentTaxAmount),
        ISCHANGED(TotalTaxAmount),
        ISCHANGED(SBQQ__UpgradedSubscription__c),
        ISCHANGED(PMC_CPQ_ShipTo__c),
        ISCHANGED(PMC_CPQ_Account__c),
        ISCHANGED(PMC_CPQ_Owner__c),
        AND(
            NOT(ISCHANGED(ApprovalStatus__c)),
            TEXT(ApprovalStatus__c)=&quot;Approved&quot;,
            ISCHANGED(PMC_CPQ_FinalAgreedPrice__c)
        )
    )
)</errorConditionFormula>
        <errorMessage>This Order has been placed and is therefore locked from further modifications. Only the Final Agreed Price field for FPD Order Lines can be modified if it is not Approved. Any updates from SAP will be reflected here.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_CPQ_NonFPDOrderItemsReadOnly</fullName>
        <active>true</active>
        <description>This rule is to prevent users from editing Non FPD Order Product record except Integration User and System Administrator.</description>
        <errorConditionFormula>AND(
NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
AND(NOT($Profile.Name = &quot;System Administrator&quot;),NOT($Profile.Name = &quot;API Only profile&quot;),NOT($Profile.Name = &quot;Salesforce API Only System Integrations&quot;),NOT( CONTAINS($Profile.Name,&apos;Digital Hub&apos;))),
TEXT(SBQQ__Subscription__r.SBQQ__QuoteLine__r.PMC_CPQ_ContractType__c )&lt;&gt;&apos;FPD&apos;,
NOT(ISNEW())
)</errorConditionFormula>
        <errorMessage>This Order has been placed and is therefore locked from further modifications. Any updates from SAP will be reflected here.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__CannotChangeBookingIndicatorOnActivation</fullName>
        <active>true</active>
        <description>Can’t edit the bookings status on an activated order product.</description>
        <errorConditionFormula>AND(SBQQ__Activated__c, ISCHANGED(SBQQ__BookingsIndicator__c))</errorConditionFormula>
        <errorDisplayField>SBQQ__BookingsIndicator__c</errorDisplayField>
        <errorMessage>Can’t edit the bookings status on an activated order product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__RecurringChargeTypeMustHaveBillingType</fullName>
        <active>true</active>
        <description>When Charge Type is Recurring, a Billing Type must be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Recurring&apos;), ISPICKVAL(SBQQ__BillingType__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is Recurring, a Billing Type must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_frequency</fullName>
        <active>true</active>
        <description>When Charge Type is &apos;One-Time&apos;, a Billing Frequency value cannot be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingFrequency__c, &apos;&apos;)))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingFrequency__c</errorDisplayField>
        <errorMessage>When Charge Type is &apos;One-Time&apos;, a Billing Frequency value cannot be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_type</fullName>
        <active>true</active>
        <description>When Charge Type is One-Time or Usage, a Billing Type cannot be selected.</description>
        <errorConditionFormula>OR(
            AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))),
            AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Usage&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is One-Time or Usage, a Billing Type value cannot be selected.</errorMessage>
    </validationRules>
</CustomObject>